Fix footer gap

--- a/style.css
+++ b/style.css
@@ -64,6 +64,7 @@ ol {
 .footer {
 	padding: 0.5rem;
 	margin-top: -2rem;
+	margin-bottom: 0rem;
 	background-color: rgb(51, 51, 50);
 }
 
